--- a/pages/blog.html
+++ b/pages/blog.html
@@ -194,6 +194,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/index.js" defer></script>
+    <script src="../scripts/blog.js" defer></script>
 
 </body>
 </html>
