--- a/pages/order.html
+++ b/pages/order.html
@@ -18,7 +18,6 @@
 <body>
  
 <div id="navbar-container"></div>
-<div class="navbar-spacer"></div>
 
   <section class="container py-5">
     <h1 class="display-4 text-center mb-1"><strong>Complete!</strong></h1>
@@ -57,7 +56,8 @@
 
       
       <div class="text-start mx-auto mb-3" style="max-width: 320px;">
-    <p class="mb-2"><strong>Order code:</strong> <span class="order-value">#0123_AB78X</span></p>
+        <p class="mb-2 d-flex align-items-center gap-2"><strong>Order code:</strong> 
+        <span class="order-value" id="order-code"></span></p>
         <p class="mb-0"><strong>Date:</strong> <span class="order-value" id="order-date"></span></p>
         <p class="mb-0"><strong>Total:</strong> <span class="order-value total-amount">$0.00</span></p>
         <p class="mb-0"><strong>Payment method:</strong> <span class="order-value"> Credit Card</span></p>
