--- a/pages/product.html
+++ b/pages/product.html
@@ -17,9 +17,8 @@
 <body>
   
   <div id="navbar-container"></div>
-  <div class="navbar-spacer"></div>
 
-  <div class="product-page">
+  <div class="product-page my-5">
     <div class="breadcrumb">
       <a href="../index.html">Home</a> &gt;
       <a href="../pages/shop.html">Shop</a> &gt;
