--- a/pages/shop.html
+++ b/pages/shop.html
@@ -17,7 +17,6 @@
 <body>
   
 <div id="navbar-container"></div>
-<div class="navbar-spacer"></div>
 
     <!-- Shop Banner -->
     <section class="shop-banner-section py-4">
@@ -102,10 +101,11 @@
             <!-- Product 1 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="240">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
-                        <span class="badge bg-light text-dark small fw-semibold">NEW</span>
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
+                        <span class="badge bg-light text-dark small fw-semibold ">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
                     <!-- Product Img -->
@@ -134,14 +134,16 @@
                     </div>
 
                 </div>
+                </a>
             </div>
 
             <!-- Product 2 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="280">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -170,15 +172,16 @@
                         </p>
                     </div>
 
-                </div>
+                </div></a>
             </div>
 
             <!-- Product3 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="300">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -207,14 +210,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 4 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="220">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -244,14 +249,16 @@
                     </div>
 
                 </div>
+            </a>
             </div>
 
             <!-- Product 5 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="260">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -280,14 +287,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 6 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="400">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -316,14 +325,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 7 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="360">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -352,14 +363,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 8 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="440">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -388,14 +401,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 9 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="90">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -424,14 +439,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 10 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="480">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -460,14 +477,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product11 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="180">
+                <a href="../pages/product.html" class="text-decoration-none text-reset"></a>
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -496,14 +515,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 12 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Living Room" data-price="150">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -532,14 +553,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 13 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Kitchen" data-price="120">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -568,14 +591,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 14 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Kitchen" data-price="500">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -604,14 +629,16 @@
                         </p>
                     </div>
                 </div>
+            </a>
             </div>
 
             <!-- Product 15 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Bedroom" data-price="320">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -640,14 +667,16 @@
                         </p>
                     </div>
                 </div>
+                </a>
             </div>
 
             <!-- Product 16 -->
             <!-- Product Card -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" data-category="Bedroom" data-price="250">
+                <a href="../pages/product.html" class="text-decoration-none text-reset">
                 <div class="card border-0 bg-transparent position-relative overflow-hidden product-card">
                     <!-- Badges -->
-                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-3">
+                    <div class="position-absolute top-0 start-0 m-2 d-flex flex-column gap-1 z-1">
                         <span class="badge bg-light text-dark small fw-semibold">NEW</span>
                         <span class="badge bg-success text-white small fw-semibold">-50%</span>
                     </div>
@@ -677,11 +706,12 @@
                     </div>
                 </div>
             </div>
+            </a>
         </div>
     </main>
 
     <!-- Show More Button -->
-    <div class="text-center mt-4">
+    <div class="text-center mt-1 mb-4">
         <button class="btn btn-outline-dark px-4 py-2 rounded-pill">
             Show more
         </button>
